--- a/src/SampleRater.css
+++ b/src/SampleRater.css
@@ -38,3 +38,7 @@
   color: #92400e;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
 }
+/* Safari zoom reset reflow class */
+.zoom-reset-hack {
+  transform: scale(1.0001);
+}
